--- a/.github/workflows/test.workflow.yml
+++ b/.github/workflows/test.workflow.yml
@@ -3,21 +3,31 @@ on: push
   branches: [dev,master]
 
 jobs:
-  build:
-
+  test:
     runs-on: ubuntu-latest
     steps:
-    - uses: actions/checkout@v2
+    - name: Get Repo
+      uses: actions/checkout@v3
     - name: Set up Python
-      uses: actions/setup-python@v2
+      uses: actions/setup-python@v3
       with:
         python-version: '3.x'
+        architecture: 'x64'
     - name: Install dependencies
-      run: |
-        python -m pip install --upgrade pip
-        pip install -r requirements.txt
+      run: pip install -r requirements.txt
     - name: Test with pytest
-      run: |
-        pip install pytest
-        pip install pytest-cov
-        pytest tests.py --doctest-modules --junitxml=junit/test-results.xml --cov=com --cov-report=xml --cov-report=html
+      run: pytest
+    - name: Check on failures
+      if:  ${{ failure() }}
+        # run: echo " "
+      uses: dacbd/create-issue-action@main
+      with:
+          token: ${{ github.token }}
+          title: action workflow failed.
+          body: |
+            
+            [Failed Run](https://github.com/${{ github.repository }}/actions/runs/${{ github.run_id }})
+            [Codebase](https://github.com/${{ github.repository }}/tree/${{ github.sha }})
+            Workflow name - `${{ github.workflow }}`
+            Job -`${{ github.job }}` : status -`${{ job.status }}`
+          assignees: Nom de celui qui a commit ${{ github.event.pusher.name }}
