--- a/.github/workflows/test.workflow.yml
+++ b/.github/workflows/test.workflow.yml
@@ -28,3 +28,23 @@ jobs:
             Workflow name - `${{ github.workflow }}`
             Job -`${{ github.job }}`: status -`${{ job.status }}`
           assignees: ${{ github.event.pusher.name }}
+  build:
+    runs-on: ubuntu-latest
+    needs: [test]
+    steps:
+      - name: Get repository
+        uses: actions/checkout@v3
+      - name: Setup Docker qemu
+        uses: docker/setup-qemu-action@v1
+      - name: Setup Docker buildX
+        uses: docker/setup-buildx-action@v1
+      - name: Login Dockerhub
+        uses: docker/login-action@v1
+        with:
+          username: ${{ secrets.DOCKER_USERNAME}}
+          password: ${{ secrets.DOCKER_PASSWORD}}
+      - name: Build & PUsj docker
+        uses: docker/build-push-action@v2
+        with:
+          push: true
+          tags: ${{ secrets.DOCKER_USERNAME }}/exopytongitactions:latest
