--- a/.github/workflows/test.workflow.yml
+++ b/.github/workflows/test.workflow.yml
@@ -30,7 +30,7 @@ jobs:
           assignees: ${{ github.event.pusher.name }}
   build:
     runs-on: ubuntu-latest
-    needs: [test]
+    needs: [tests]
     steps:
       - name: Get repository
         uses: actions/checkout@v3
