--- a/.github/workflows/test.workflow.yml
+++ b/.github/workflows/test.workflow.yml
@@ -15,6 +15,8 @@ jobs:
         run: pip install -r requirements.txt
       - name: Run tests
         run: pytest
+        if: ${{ failure() }}
+        uses: exit1()
       - name: Check on fail
         if: ${{ failure() }}
         uses: dacbd/create-issue-action@main
